# recall

./: .gitignore  README.md  pyproject.toml  recall.config.json
decks/: architecture.flashcards.json
docs/: dev-flash-card-cli-prd.md  recall-collections-prd.md
src/recall/: cli.py  config.py  errors.py  models.py  output.py  parser.py  repository.py  sidecar.py
src/recall/application/: __init__.py  collections.py  decks.py  init_project.py  learning.py  validation.py
src/recall/commands/: deck.py  init.py  next.py  normalize.py  review.py  scan.py  stats.py  validate.py
src/recall/domain/: __init__.py  entities.py  errors.py  markdown.py
src/recall/domain/scheduler/: __init__.py  base.py  sm2.py
src/recall/infrastructure/: __init__.py  collection_store.py  config_store.py  deck_store.py  sidecar_store.py
src/recall/interfaces/: __init__.py  cli.py
src/recall/presentation/: __init__.py  cli.py  exit_codes.py
src/recall/presentation/commands/: next.py  normalize.py  review.py  scan.py  validate.py
src/recall/scheduler/: __init__.py  sm2.py
tests/: test_clean_architecture.py  test_cli_collections.py  test_cli_deck.py  test_cli_help.py  test_cli_init.py  test_cli_learning.py  test_cli_next_review.py  test_collections_config.py  test_parser.py  test_scheduler_sm2.py  test_sidecar.py  test_validate.py
